<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id">246770775471647</string>
    <string name="add_fav_team">Add Favorite Team</string>
    <string name="all">All</string>
    <string name="app_name">Ludicrus</string>
    <string name="away_team">Away Team</string>
    <string name="button_login">Login</string>
    <string name="button_loginFacebook">Login facebook</string>
    <string name="calendar">Calendar</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="favorites">Favorites</string>
    <string name="final_caps">FINAL</string>
    <string name="finished">Finished</string>
    <string name="hello_world">Hello world!</string>
    <string name="home_team">Home Team</string>
    <string name="match_location">Location</string>
    <string name="match_time">Time</string>
    <string name="matches">Matches</string>
    <string name="menu_settings">Settings</string>
    <string name="organization">Organization</string>
    <string name="password">password</string>
    <string name="pref_logout">Logout</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="results">Results</string>
    <string name="score_delimiter">-</string>
    <string name="settings">Settings</string>
    <string name="show_favorites">Favorites only</string>
    <string name="sign_in">Sign in</string>
    <string name="skip">Skip</string>
    <string name="squad">Squad</string>
    <string name="teams">Teams</string>
    <string name="title_activity_addFavTeams">Favorite Teams</string>
    <string name="title_activity_myTeams">My Teams</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_user_home">Home</string>
    <string name="title_activity_scores">Scores</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_sportsTeam">Sports Team</string>
    <string name="username">username</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="user_name">Username</string>
    <string name="zero">0</string>

</resources>