<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/row"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp">

    <ImageView
        android:id="@+id/homeTeamLogo"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/home_team" />

    <ImageView
        android:id="@+id/awayTeamLogo"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/away_team" />

    <TextView
        android:id="@+id/homeTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/homeTeamLogo"
        android:layout_toEndOf="@+id/homeTeamLogo"
        android:paddingLeft="2dp"
        android:text="@string/home_team"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/visitorTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/awayTeamLogo"
        android:layout_toStartOf="@+id/awayTeamLogo"
        android:paddingRight="2dp"
        android:paddingEnd="2dp"
        android:text="@string/away_team"
        android:textIsSelectable="false" />
    
    <TextView
        android:id="@+id/matchTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/match_time"
        android:textIsSelectable="false" />
    
    <TextView
        android:id="@+id/matchLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:text="@string/match_location"
        android:textIsSelectable="false" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="80dp" />

</RelativeLayout>